# rfcorr

./: README.md  pyproject.toml
notebooks/: test_periodic_pathological.ipynb  test_sector_etf.ipynb  test_sector_etf_ts.ipynb
rfcorr/: cat.py  extra_trees.py  random_forest.py  sign.py  xgboost.py
tests/: test_rfcorr.py
