[tool.poetry]
name = "rfcorr"
version = "0.1.0"
description = "Random Forest-inspired correlation methods"
authors = ["mjbommar <michael@bommaritollc.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.0.2"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
