[tool.poetry]
name = "rfcorr"
version = "0.1.2"
description = "Random Forest-inspired correlation/dependence methods"
repository = 'https://github.com/mjbommar/rfcorr'
readme = 'README.md'
authors = ["Michael Bommarito <michael@bommaritollc.com>"]
keywords = ['ml', 'correlation', 'random forest', 'sklearn', 'machine learning', 'dependence']
classifiers = ["Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
license = 'Apache-2.0'

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.0.2"
numpy = "^1.22.2"
catboost = "^1.0.4"
xgboost = "^1.6.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
